@@ -205,7 +205,7 @@ public final class JcsCache extends AbstractBaseCache {
      * @see java.util.Map#putAll(java.util.Map)
      */
     public void putAll(final Map map) {
-        for (Iterator iter = map.entrySet().iterator(); iter.hasNext();) {
+        for (Iterator iter = map.entrySet().iterator(); iter.hasNext(); ) {
             Map.Entry entry = (Map.Entry) iter.next();
             Object[] params = new Object[] {entry.getKey(), entry.getValue()};
             invokeCacheMethod(_putMethod, params);
